# WineTone

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backup.yml  build-image.yml  e2e.yml  retrain.yml  tests.yml
docs/: AUTO-RETRAIN-PLAN.md  DATA-AND-ML-PIPELINE-PLAN.md  HOSTING-PLAN.md  MEDIUM-POST-DRAFT.md  PRODUCTION-READINESS.md  PROGRESS.md  SCRAPER-PLAN-TTB.md  chemical-analysis-options.md  security-review-2026-05-24.md
docs/blog/: 2026-05-22-catching-up-on-winetone.md  2026-05-23-winetone-was-never-about-wine.md
docs/release-notes/: v2026.05.21.md  v2026.05.22.md
docs/runbooks/: cdn-static-assets.md  clerk-production-setup.md  cloudflare-proxy-toggle.md  cost-monitoring.md  db-backup-verification.md  e2e-testing.md  email-infrastructure.md  encoder-rotation.md  hf-inference-providers.md  private-image-cutover.md  security-review-plan.md  two-stage-deploy.md
migrations/: env.py
migrations/versions/: 20260521_000_baseline.py  20260521_001_age_confirmation.py  20260522_002_user_labels_unique.py  20260522_003_wines_submitted_by.py  20260522_004_canon_uniq.py  20260522_005_onboarding.py
scripts/: backup_labels.py  capture_e2e_session.py  demo_calibrate_and_recommend.sh  fine_tune_encoder.py  reencode_corpus.py  retrain.py
src/winetone/: __init__.py  auth.py  auth_clerk.py  calibrate.py  calibrate_mlp.py  canonicalize.py  cli.py  cluster.py  db.py  discover.py  embed.py  embed_finetune.py  embed_sparse.py  embed_user_labels.py  lexical.py  llm.py  logging_config.py  moderation.py  onboarding.py  palate.py  paths.py  recommend.py  release.py  scanner.py  social.py  submit.py
src/winetone/sources/: __init__.py  base.py  uci_wine.py  uci_wine_quality.py  wikidata.py  wine_enthusiast.py  wine_enthusiast_150k.py
src/winetone/web/: __init__.py  app.py
src/winetone/web/static/: style.css
src/winetone/web/templates/: _labels_list.html  _search_results.html  base.html  index.html
tests/: test_app_smoke.py  test_lexical.py  test_llm_router.py  test_moderation.py  test_registry.py
tests/e2e/: conftest.py  test_authenticated.py  test_smoke.py
www/static/: llms.txt  manifest.json  service-worker.js  style.css
www/templates/: _ask_results.html  _discover_results.html  _error.html  _fit_status.html  _labels_list.html  _recommendations.html  _rename_form.html  _search_results.html  _vocab_results.html  _wine_label_editor.html  admin_reports.html  age_gate.html  ask.html  base.html  catalog.html  dashboard.html  discover.html  index.html  install.html  onboarding.html  palate.html  privacy.html  terms.html  users.html  vocab.html  wine_detail.html  wine_new.html  wine_scan.html
