[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "winetone"
version = "0.1.0"
description = "Data + ML pipeline for the WineTone project (Pantone for wine)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Archis Gore", email = "me@archisgore.com" }]
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=16",
    "click>=8.1",
    "tenacity>=8.4",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "fastembed>=0.4",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sentry-sdk[fastapi]>=2.0",
    "markdown>=3.5",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]
# Encoder fine-tuning — only needed to RUN scripts/fine_tune_encoder.py.
# Pulls in transformers + a heavier torch path; not installed in the
# deployed Space (which uses fastembed + ONNX for serving).
finetune = [
    "sentence-transformers>=3.0",
    "accelerate>=0.30",
]
# Apple-Silicon-native acceleration. Installed only when explicitly
# requested (`pip install -e ".[mac]"`) or auto-installed by the
# Makefile's `make dev-mac` target. Falls back to PyTorch on
# non-Apple-Silicon hosts.
mac = [
    "mlx>=0.18; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.scripts]
winetone = "winetone.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/winetone"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pyflakes + pycodestyle
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
]
ignore = [
    "E501",         # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
